--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   provider: 6.0.5
   text_scroll: 0.1.2
   flutter_slidable: 2.0.0
+  image_picker: 0.8.6+3
+  
 
 dev_dependencies:
   build_runner: 2.3.3
