--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
+    def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 android {
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -44,23 +49,35 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.musica"
+        applicationId "in.brototype.audizi_application"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        versionCode 4
+        versionName "1.0"
         multiDexEnabled true
     }
 
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
-        }
+       signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
     }
+   buildTypes {
+       release {
+           signingConfig signingConfigs.release
+       }
+   }
+//    configurations {
+//         all {
+//             exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
+//         }
+//     }
+
 }
 
 flutter {
@@ -69,5 +86,14 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.material:material:1.8.0'
+     implementation('androidx.lifecycle:lifecycle-viewmodel:2.5.1')
+    implementation('androidx.lifecycle:lifecycle-livedata:2.5.1')
+    // exclude the lifecycle-viewmodel-ktx dependency
+    implementation('androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1') {
+        exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel'
+    }
+    implementation('androidx.lifecycle:lifecycle-viewmodel:2.5.1')
+    implementation('androidx.lifecycle:lifecycle-livedata:2.5.1')
+    implementation('androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1')
 }
