--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=2.19.0 <3.0.0'
@@ -28,29 +28,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  animated_splash_screen: 1.3.0
   cupertino_icons: 1.0.2
   flutter:
     sdk: flutter
+  flutter_slidable: 2.0.0
   hive: 2.2.3
   hive_flutter: 1.1.0
+  image_picker: 0.8.6+3
   just_audio: 0.9.31
   just_audio_background: 0.0.1-beta.9
   on_audio_query: 2.6.1
   permission_handler: 10.2.0
   provider: 6.0.5
   text_scroll: 0.1.2
-  flutter_slidable: 2.0.0
-  image_picker: 0.8.6+3
-  
-  
 
 dev_dependencies:
   build_runner: 2.3.3
+  flutter_launcher_icons: ^0.12.0
   flutter_lints: 2.0.0
   flutter_test:
     sdk: flutter
   hive_generator: null
+
+flutter icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -71,8 +74,7 @@ flutter:
     - assets/images/profileq.jpeg
     - assets/images/splash2.webp
     - assets/images/miniplayerb.jpg
-
-
+    - assets/images/images.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
