--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -54,7 +54,7 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 4
+        versionCode 5
         versionName "1.0"
         multiDexEnabled true
     }
@@ -72,11 +72,11 @@ android {
            signingConfig signingConfigs.release
        }
    }
-//    configurations {
-//         all {
-//             exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
-//         }
-//     }
+   configurations {
+        all {
+            exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
+        }
+    }
 
 }
 
