profile screen issue, favourite scn overflow and drawer profile image view changed

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,11 +72,11 @@ android {
            signingConfig signingConfigs.release
        }
    }
-   configurations {
-        all {
-            exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
-        }
-    }
+//    configurations {
+//         all {
+//             exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
+//         }
+//     }
 
 }
 
