--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     
    <application
-        android:label="Audizi Player"
+        android:label="Music Player"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
          <activity
