--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: musica
+name: musics
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+4
 
 environment:
   sdk: '>=2.19.0 <3.0.0'
@@ -38,7 +38,7 @@ dependencies:
   just_audio: 0.9.31
   just_audio_background: 0.0.1-beta.9
   lottie: 2.6.0
-  on_audio_query: 2.6.1
+  on_audio_query: 2.9.0
   permission_handler: 10.2.0
   provider: 6.0.5
   text_scroll: 0.1.2
@@ -65,15 +65,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/playlist.jpeg
-    - assets/images/profileq.jpeg
-    - assets/images/images.png
-    - assets/images/im.jpg
-    - assets/images/newsplash.jpg
-    - assets/images/musicnotfound.json
-    - assets/images/msnotfound.json
-    - assets/images/msplayer.json
-    
+    - assets/images/
     
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
